# mobius

./: .env.example  README.md  config.local.yaml  config.yaml  pyproject.toml
ct/: aiagentshub.sh  mobius.sh
deploy/: install_lxc.sh  runtime_layout.md
deploy/proxmox/: ai-agents-hub-lxc.sh
install/: aiagentshub-install.sh  mobius-install.sh
prompts/specialists/: orchestrator.md
src/ai_agents_hub/: __main__.py  config.py  diagnostics.py  main.py  onboarding.py
src/ai_agents_hub/api/: openai_compat.py  openai_compatible_api.py
src/ai_agents_hub/orchestration/: orchestrator.py  specialist_router.py  supervisor.py
src/ai_agents_hub/prompts/: manager.py
src/mobius/: __init__.py  __main__.py  config.py  diagnostics.py  main.py  onboarding.py  runtime_context.py
src/mobius/api/: openai_compatible_api.py
src/mobius/orchestration/: orchestrator.py  specialist_router.py
src/mobius/state/: decision_engine.py  journal_engine.py  memory_engine.py  migrations.py  models.py  pipeline.py  projection_sync.py  storage.py
tests/: test_cli_diagnostics.py  test_cli_update.py  test_config_validation.py  test_live_openwebui_behavior.py  test_memory_engine.py  test_onboarding.py  test_openai_compat.py  test_openai_compatible_api.py  test_orchestrator_routing_behavior.py  test_projection_sync.py  test_prompts.py  test_routing.py  test_specialist_router.py  test_state_decision_engine.py  test_state_pipeline.py
